style fix for row when no numbers are visible

--- a/packages/components/components/elvis-pagination/src/react/style.scss
+++ b/packages/components/components/elvis-pagination/src/react/style.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  height: 36px;
 
   .ewc-pagination--displayText {
     font-family: 'Red Hat Text';
